--- a/style.css
+++ b/style.css
@@ -1,1 +1,19 @@
 
+#header {
+  font-size: 10px;
+}
+body {
+  background: #1c6ea4;
+  background: -moz-linear-gradient(
+    45deg,
+    #1c6ea4 0%,
+    #adc2cb 48%,
+    #144e75 100%
+  );
+  background: -webkit-linear-gradient(
+    45deg,
+    #1c6ea4 0%,
+    #adc2cb 48%,
+    #144e75 100%
+  );
+  background: linear-gradient(45deg, #1c6ea4 0%, #adc2cb 48%, #144e75 100%);
