--- a/style.css
+++ b/style.css
@@ -17,3 +17,40 @@ body {
     #144e75 100%
   );
   background: linear-gradient(45deg, #1c6ea4 0%, #adc2cb 48%, #144e75 100%);
+  }
+.nav-link {
+  align-content: space-between;
+}
+#nav-bar {
+  align-content: space-between;
+}
+.workings {
+  -webkit-box-shadow: inset 2px -6px 8px 0px rgba(0, 0, 0, 0.36);
+  box-shadow: inset 2px -6px 8px 0px rgba(0, 0, 0, 0.36);
+  align-items: center;
+  margin-right: 40%;
+  margin-left: 500px;
+  background-color: rgb(185, 185, 185);
+}
+.btn {
+  color: rgb(0, 0, 0);
+  font-size: 12px;
+  line-height: 12px;
+  padding: 5px;
+  border-radius: 17px;
+  font-family: Georgia, serif;
+  font-weight: normal;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  background-image: linear-gradient(
+    to right,
+    rgb(28, 110, 164) 0%,
+    rgb(35, 136, 203) 50%,
+    rgb(20, 78, 117) 100%
+  );
+  box-shadow: rgb(0, 0, 0) 5px 5px 15px 5px;
+  border: 2px solid rgb(28, 110, 164);
+  display: inline-block;
+}
